Bugfix: dark mode missing --font-log variable, black-on-black text.

--- a/src/css/mspaThemes.scss
+++ b/src/css/mspaThemes.scss
@@ -58,6 +58,7 @@
 		--font-highlight: #000000;
 		--font-disabled: rgba(255, 255, 255, 0.2);
 		--font-ctx: #ffffff;
+		--font-log: #ffffff;
 
 		--header-bg: #262626;
 		--header-tabSection: #404040;
